--- a/static/index.html
+++ b/static/index.html
@@ -117,7 +117,7 @@
         <div class="keybord-column" data-key="N">N</div>
         <div class="keybord-column" data-key="M">M</div>
         <div class="keybord-column_big" data-key="backspace">
-          <img class="backspace" src="assets/backspace.svg" alt="" />
+          <img class="backspace" data-key="backspace" src="assets/backspace.svg" alt="" />
         </div>
       </div>
     </footer>
